# RegionX-Pallets

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
config/: HEADER-GPL3
pallets/order-creator/: Cargo.toml  README.md
pallets/order-creator/src/: benchmarking.rs  dispatcher.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/renewal-financing/: Cargo.toml
